--- a/webpackYoga/index.html
+++ b/webpackYoga/index.html
@@ -249,7 +249,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="dist/main.js"></script>
+	<script src="dist/js/bundle.js"></script>
 </body>
 
 </html>
